# typr-oss

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  Taskfile.yaml  components.json  download-fonts.sh  enable-long-paths.ps1  package.json  pnpm-lock.yaml
.github/instructions/: frontend-engineering-standards.instructions.md  i18n-rules.instructions.md  react-patterns.instructions.md  tauri-plugin.instructions.md
.github/workflows/: oss_release.yaml  secret_scan.yaml  validate_release_secrets.yaml
.husky/: pre-commit
apps/desktop/: README.md  env.example  index.html  lingui.config.js  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.conf.stable.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/stable/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  deeplink.rs  ext.rs  lib.rs  main.rs  store.rs
apps/desktop/src-tauri/windows/nsis/: registry-hooks.nsi
crates/aec/: Cargo.toml
crates/ai-retry/: Cargo.toml
crates/ai-retry/src/: lib.rs
crates/analytics/: Cargo.toml
crates/audio/: Cargo.toml  build.rs
crates/calendar-apple/: Cargo.toml
crates/calendar-google/: Cargo.toml
crates/calendar-outlook/: Cargo.toml
crates/chunker/: Cargo.toml
crates/db-script/: Cargo.toml
crates/db-script/src/: lib.rs
crates/db-user/: Cargo.toml
crates/db-user/assets/: onboarding-raw.html  thank-you.md
crates/db-user/src/: ask_context_snapshots_migration.sql  ask_context_snapshots_ops.rs  ask_context_snapshots_types.rs  ask_messages_migration.sql  ask_messages_ops.rs  ask_messages_types.rs  ask_threads_migration.sql  ask_threads_ops.rs  ask_threads_types.rs  calendars_types.rs  chat_messages_migration_1.sql  chat_messages_ops.rs  chat_messages_types.rs  config_ops.rs  config_types.rs  extensions_ops.rs  humans_ops.rs  humans_types.rs  init.rs  lib.rs  organizations_ops.rs  project_brief_refreshes_migration.sql  project_brief_sources_migration.sql  project_briefs_migration.sql  project_briefs_ops.rs  project_briefs_types.rs  project_file_extractions_migration.sql  project_file_extractions_ops.rs  project_file_extractions_types.rs  project_files_migration.sql  project_files_ops.rs  project_files_types.rs  project_knowledge_jobs_migration.sql  project_knowledge_jobs_ops.rs  project_knowledge_jobs_types.rs  project_knowledge_syntheses_migration.sql  project_knowledge_syntheses_ops.rs  project_knowledge_syntheses_types.rs  project_source_chunks_migration.sql  project_source_chunks_ops.rs  (+24 more)
crates/denoise/: Cargo.toml
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs
crates/detect/src/app/: macos.rs  mod.rs  windows.rs
crates/detect/src/browser/: macos.rs  mod.rs  windows.rs
crates/detect/src/mic/: macos.rs  windows.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs
crates/gguf-patch/: Cargo.toml
crates/language/: Cargo.toml
crates/language/src/: lib.rs
crates/llama/: Cargo.toml
crates/llama/examples/: test_inference.rs
crates/llama/src/: error.rs  lib.rs  types.rs
crates/mcp-server/: Cargo.toml  README.md  test-mcp.sh
crates/mcp-server/src/: db.rs  formatters.rs  main.rs  tools.rs
crates/notification2/: Cargo.toml
crates/notification2/src/: lib.rs  macos.rs
crates/notion/: Cargo.toml
crates/pyannote-local/: Cargo.toml
crates/pyannote-local/src/: embedding.rs  error.rs  segmentation.rs
crates/pyannote-local/src/data/: README.md
crates/tcc/: Cargo.toml
crates/template/: Cargo.toml
crates/whisper-local/: Cargo.toml
crates/whisper-local/src/: error.rs  lib.rs  model.rs  stream.rs
crates/ws-utils/: Cargo.toml
docs/: bundled-assets.md  models.md  oss-sanitization.md  project-knowledge.md  release.md  setup.md
plugins/analytics/: Cargo.toml  package.json
plugins/apple-calendar/: Cargo.toml  package.json
plugins/auth/: Cargo.toml  build.rs  package.json
plugins/auth/js/: bindings.gen.ts
plugins/auth/permissions/: default.toml
plugins/auth/permissions/autogenerated/: reference.md
plugins/auth/permissions/schemas/: schema.json
plugins/auth/src/: commands.rs  error.rs  ext.rs  lib.rs
plugins/config/: Cargo.toml  build.rs  package.json  tsconfig.json
plugins/config/js/: bindings.gen.ts
plugins/config/permissions/: default.toml
plugins/config/permissions/autogenerated/: reference.md
plugins/config/permissions/autogenerated/commands/: get_ai_config.toml  get_general_config.toml  get_notification_config.toml  set_ai_config.toml  set_general_config.toml  set_notification_config.toml
plugins/config/permissions/schemas/: schema.json
plugins/config/src/: commands.rs  error.rs  ext.rs  lib.rs  store.rs  types.rs
plugins/connector/: Cargo.toml  build.rs  package.json
plugins/db/: Cargo.toml  build.rs  package.json
plugins/listener/: Cargo.toml  build.rs  package.json
plugins/listener/js/: bindings.gen.ts
plugins/listener/permissions/: default.toml
plugins/listener/permissions/autogenerated/: reference.md
plugins/listener/permissions/autogenerated/commands/: get_microphone_selection_mode.toml  get_pipeline_status.toml  set_microphone_auto.toml
plugins/listener/permissions/schemas/: schema.json
plugins/listener/src/: client.rs  commands.rs  error.rs  events.rs  ext.rs  fsm.rs  lib.rs  policy.rs  provider.rs
plugins/local-stt/: Cargo.toml  build.rs  package.json
plugins/local-stt/benches/: simple.rs
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/permissions/: default.toml
plugins/local-stt/permissions/autogenerated/: reference.md
plugins/local-stt/permissions/autogenerated/commands/: get_demo_audio_path.toml
plugins/local-stt/permissions/schemas/: schema.json
plugins/local-stt/src/: commands.rs  error.rs  events.rs  ext.rs  lib.rs  model.rs  server.rs  whisper_manager.rs
scripts/: build_mcp_sidecar.sh  prepare_oss_release_secrets.sh  render_homebrew_cask.sh
(+587 files in other folders)
