[package]
name = "typr-ai-retry"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { workspace = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
