[package]
name = "db-script"
version = "0.1.0"
edition = "2021"

[dependencies]
typr-listener-interface = { workspace = true }
libsql = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
typr-data = { workspace = true }
typr-db-core = { workspace = true }

tokio = { workspace = true, features = ["macros"] }
