[package]
name = "db-user"
version = "0.1.0"
edition = "2021"

[dependencies]
typr-buffer = { workspace = true }
typr-calendar-interface = { workspace = true }
typr-data = { workspace = true }
typr-db-core = { workspace = true }
typr-db-script = { workspace = true }
typr-language = { workspace = true }
typr-listener-interface = { workspace = true }

libsql = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["chrono"] }
specta = { workspace = true, features = ["derive", "chrono", "serde_json"] }

chrono = { workspace = true, features = ["serde"] }
indoc = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
