[package]
name = "detect"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
cidre = { workspace = true }

objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true }

objc2-application-services = { workspace = true }
macos-accessibility-client = "0.0.1"

[target."cfg(target_os = \"windows\")".dependencies]
sysinfo = "0.33.1"
winreg = "0.55"
