[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
thiserror = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }

[dev-dependencies]
dirs = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.5"
