[package]
name = "language"
version = "0.1.0"
edition = "2021"

[features]
default = ["whisper"]
whisper = ["dep:typr-whisper"]

[dependencies]
codes-iso-639 = { workspace = true }

typr-whisper = { workspace = true, optional = true }

schemars = { workspace = true }
serde = { workspace = true }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
