[package]
name = "llama"
version = "0.1.0"
edition = "2021"

# https://github.com/utilityai/llama-cpp-rs/blob/0.1.144/llama-cpp-2/Cargo.toml
[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
openmp = ["llama-cpp-2/openmp"]

[dependencies]
typr-gguf = { workspace = true }

encoding_rs = "0.8.35"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", tag = "0.1.144", default-features = false }
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs", tag = "0.1.144", default-features = false }

async-openai = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
typr-buffer = { workspace = true }
typr-data = { workspace = true }
typr-gbnf = { workspace = true }
typr-listener-interface = { workspace = true }
typr-template = { workspace = true }
tracing-subscriber = { workspace = true }

dirs = { workspace = true }
rand = "0.9.0"
serde_json = { workspace = true }

llguidance = "1.1.0"
toktrie_hf_downloader = "1.1.0"
toktrie_hf_tokenizers = "1.1.0"
