[package]
name = "notification2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
wezterm = { git = "https://github.com/yujonglee/wezterm", rev = "ba9d6a6", package = "wezterm-toast-notification" }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSSet"] }
objc2-user-notifications = { workspace = true }
block2 = { workspace = true }
