[package]
name = "pyannote-local"
version = "0.1.0"
edition = "2021"

[features]
default = []
coreml = ["typr-onnx/coreml"]
directml = ["typr-onnx/directml"]
load-dynamic = ["typr-onnx/load-dynamic"]

[dependencies]
typr-onnx = { workspace = true }

dasp = { workspace = true }
knf-rs = { git = "https://github.com/thewh1teagle/pyannote-rs", rev = "d97bd3b", package = "knf-rs" }
simsimd = { version = "6" }

thiserror = { workspace = true }

serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
typr-data = { workspace = true }

approx = { workspace = true }
rodio = { workspace = true }
