[package]
name = "tauri-plugin-auth"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-auth"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["test"] }
tauri-plugin-store = "2"
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }

specta = { workspace = true, features = ["serde_json"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
